# DocuMind

./: .gitignore  README.md
backend/: .env.example  list_models.py  pyproject.toml  requirements.txt  test_ai.py  test_api.py  test_auth.py  test_bg.py  test_bg2.py  test_bg3.py  test_bg4.py  test_content.txt  test_crew.py  test_dashboard.py  test_endpoints.py  test_fixture_content.txt  test_fixture_template.docx  test_gemma4.py  test_gen.py  test_llm.py  test_models.py  test_output_template_report.docx  test_phase2.py  test_template_doc.docx  test_template_e2e.py  test_template_export.py
backend/alembic/: env.py
backend/alembic/versions/: 1387af9e41f7_initial_schema.py  aee3317ba024_add_is_template_to_files.py
backend/app/: main.py
backend/app/ai/: agents.py  crew.py  llm.py  tasks.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  files.py  health.py  projects.py  reports.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  file.py  project.py  report.py  user.py
backend/app/schemas/: file.py  project.py  report.py  user.py
backend/app/utils/: export_utils.py  file_parser.py  file_utils.py
docs/: AppFlow.md  Design.md  ImplementationPlan.md  PRD.md  Rules.md  SRS.md  Schema.md  TechSpec.md  Tracker.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/Design_pages/documind_dashboard/: code.html
frontend/Design_pages/documind_design_system/: DESIGN.md
frontend/src/: App.jsx  index.css  pages.test.jsx
frontend/src/components/: MainLayout.jsx  (+1 more)
(+16 files in other folders)
