[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "crewai[google-genai]>=1.6.1",
    "fastapi>=0.137.0",
    "fastmcp>=3.4.2",
    "google-generativeai>=0.8.6",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.9.1",
    "email-validator>=2.2.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "sqlalchemy>=2.0.50",
    "tabulate>=0.9.0",
    "uvicorn>=0.49.0",
]
